# python-project-50

./: .coverage  .gitignore  README.md  coverage.xml  pyproject.toml  ruff.toml
.github/workflows/: sonar.yml
gendiff/: __init__.py  cli.py  diff.py  diff_builder.py  parsers.py
gendiff/formatters/: __init__.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_diff.py
tests/test_data/: file3.json  file3.yml  file4.json  file4.yml
