[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = []
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = ">=3.13"
pyyaml = ">=6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
ruff = ">=0.15.15"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"